<resources>
    <string name="app_name">SmartLock</string>
    <string name="auth_activity_user_name">Username</string>
    <string name="auth_activity_password">Password</string>
    <string name="main_activity_powered">Powered by</string>
    <string name="auth_activity_name_invalid">Invalid name</string>
    <string name="auth_activity_password_invalid">Password invalid</string>
    <string name="auth_activity_get_started">Get started</string>
    <string name="auth_activity_toast_error">Oops, something went wrong</string>
    <string name="door_activity_sec">%s sec.</string>
    <string name="door_activity_error">Error internet connection</string>
    <string name="settings_activity_log_out">Log out</string>
    <string name="settings_activity_settings">Settings</string>
    <string name="settings_activity_security_title">Security</string>
    <string name="settings_activity_security_description">Enable password protection for the
        application.You can set your own password
    </string>
    <string name="swipe_button_text">SwipeToUnlock</string>
</resources>
